fixing the side extra space

--- a/sass/global/_boilerplate.scss
+++ b/sass/global/_boilerplate.scss
@@ -12,7 +12,7 @@ html {
   box-sizing: border-box;
 }
 
-body {
+body, html {
   position: relative;
   height: 100%;
   overflow-x: hidden;
