--- a/sass/utils/_header.scss
+++ b/sass/utils/_header.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: -1px;
   left: 0;
-  width: 100%;
+  width: 100vw;
   background-color: black;
   box-shadow: 0 2px 16px hsla(220, 32%, 8%, 0.3);
   z-index: 100;
